--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 fhirpath = { path = "../fhirpath" }
 fhir-model = { path = "../fhir-model" }
 fhir-serialization-json = { path = "../fhir-serialization-json" }
-fhir-client = { path = "../fhir-client", features = ["axum"] }
+fhir-client = { path = "../fhir-client" }
 reflect = { path = "../reflect", features = ["derive"] }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
@@ -16,7 +16,7 @@ sqlx = { version = "0.8", features = [
     "postgres",
     "time",
 ] }
-axum = "0.8.4"
+axum = { version = "0.8.4", features = ["macros"] }
 jsonwebtoken = "9.3.1"
 sqlx-postgres = "0.8.6"
 tokio = { version = "1", features = ["full"] }
