--- a/crates/fhir-model/Cargo.toml
+++ b/crates/fhir-model/Cargo.toml
@@ -3,6 +3,9 @@ name = "fhir-model"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+sqlx = ["dep:sqlx"]
+
 [dependencies]
 reflect = { path = "../reflect", features = ["derive"] }
 serde = { version = "1.0.219", features = ["derive"] }
@@ -11,3 +14,4 @@ fhir-serialization-json = { path = "../fhir-serialization-json", features = [
 ] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
+sqlx = { version = "0.8.6", optional = true }
