--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ members = [
     "crates/fhir-model",
     "crates/fhir-serialization-json",
     "crates/fhir-serialization-json-derive",
-    "crates/fhir-client",
+    "crates/fhir-client", "crates/fhir-operation-error",
 ]
 
 [dependencies]
