--- a/crates/fhir-client/Cargo.toml
+++ b/crates/fhir-client/Cargo.toml
@@ -3,7 +3,11 @@ name = "fhir-client"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+http = ["dep:reqwest"]
+
 [dependencies]
+reqwest = { version = "0.12", optional = true }
 fhir-model = { path = "../fhir-model" }
 http = "1.3.1"
 json-patch = "4.0.0"
