--- a/crates/fhir-client/Cargo.toml
+++ b/crates/fhir-client/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2024"
 http = ["dep:reqwest"]
 
 [dependencies]
-reqwest = { version = "0.12", optional = true }
+fhir-serialization-json = { path = "../fhir-serialization-json" }
 fhir-model = { path = "../fhir-model" }
+reqwest = { version = "0.12", optional = true }
 http = "1.3.1"
 json-patch = "4.0.0"
 thiserror = "2.0.12"
