--- a/crates/fhir-operation-error/Cargo.toml
+++ b/crates/fhir-operation-error/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2024"
 
 [features]
 derive = []
+axum = ["dep:axum", "dep:fhir-serialization-json"]
 
 [dependencies]
+fhir-serialization-json = { path = "../fhir-serialization-json", optional = true }
+axum = { version = "0.8.4", optional = true }
 anyhow = "1.0.98"
 fhir-operation-error-derive = { path = "../fhir-operation-error-derive" }
 fhir-model = { path = "../fhir-model" }
