--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 [dependencies]
 fhir-operation-error = { path = "../fhir-operation-error", features = [
     "derive",
+    "axum",
 ] }
 fhirpath = { path = "../fhirpath" }
 fhir-model = { path = "../fhir-model", features = ["sqlx"] }
