--- a/crates/fhir-client/Cargo.toml
+++ b/crates/fhir-client/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
+axum = ["dep:axum"]
 http = ["dep:reqwest"]
 
 [dependencies]
+axum = { version = "0.8.4", optional = true }
 fhir-serialization-json = { path = "../fhir-serialization-json" }
 fhir-model = { path = "../fhir-model" }
 reqwest = { version = "0.12", optional = true }
