--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "cli"
+name = "oxidized-cli"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
-fhirpath = { path = "../fhirpath" }
-codegen = { path = "../codegen" }
+oxidized-fhirpath = { path = "../fhirpath" }
+oxidized-codegen = { path = "../codegen" }
 thiserror = "2.0.12"
 serde_json = "1.0"
