--- a/crates/fhir-operation-error-derive/Cargo.toml
+++ b/crates/fhir-operation-error-derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fhir-operation-error-derive"
+name = "oxidized-fhir-operation-error-derive"
 version = "0.1.0"
 edition = "2024"
 
@@ -7,7 +7,7 @@ edition = "2024"
 proc-macro = true
 
 [dependencies]
-fhir-model = { path = "../fhir-model" }
+oxidized-fhir-model = { path = "../fhir-model" }
 quote = "1.0.40"
 syn = "2.0.104"
 proc-macro2 = "1.0.95"
