--- a/crates/fhir-serialization-json/Cargo.toml
+++ b/crates/fhir-serialization-json/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "fhir-serialization-json"
+name = "oxidized-fhir-serialization-json"
 version = "0.1.0"
 edition = "2024"
 
 [features]
-derive = ["dep:fhir-serialization-json-derive"]
+derive = ["dep:oxidized-fhir-serialization-json-derive"]
 
 [dependencies]
-fhir-serialization-json-derive = { path = "../fhir-serialization-json-derive", optional = true }
+oxidized-fhir-serialization-json-derive = { path = "../fhir-serialization-json-derive", optional = true }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
