--- a/crates/indexing-worker/Cargo.toml
+++ b/crates/indexing-worker/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
-name = "indexing-worker"
+name = "oxidized-indexing-worker"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-fhirpath = { path = "../fhirpath" }
+oxidized-fhirpath = { path = "../fhirpath" }
+oxidized-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
+oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
@@ -12,5 +14,3 @@ sqlx = { version = "0.8", features = [
     "time",
 ] }
 sqlx-postgres = "0.8.6"
-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
-fhir-serialization-json = { path = "../fhir-serialization-json" }
