--- a/crates/indexing-worker/Cargo.toml
+++ b/crates/indexing-worker/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+oxidized-config = { path = "../config" }
 oxidized-fhirpath = { path = "../fhirpath" }
 oxidized-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
 oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
+oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
+    "derive",
+] }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
@@ -15,3 +19,5 @@ sqlx = { version = "0.8", features = [
 ] }
 sqlx-postgres = "0.8.6"
 rayon = "1.10.0"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
