--- a/crates/indexing-worker/Cargo.toml
+++ b/crates/indexing-worker/Cargo.toml
@@ -22,3 +22,4 @@ rayon = "1.10.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 serde = "1.0.219"
+tokio = { version = "1", features = ["full"] }
