--- a/crates/indexing-worker/Cargo.toml
+++ b/crates/indexing-worker/Cargo.toml
@@ -25,3 +25,4 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 serde = "1.0.219"
 tokio = { version = "1", features = ["full"] }
+elasticsearch = "9.0.0-alpha.1"
