--- a/crates/indexing-worker/Cargo.toml
+++ b/crates/indexing-worker/Cargo.toml
@@ -26,3 +26,4 @@ tracing-subscriber = "0.3.19"
 serde = "1.0.219"
 tokio = { version = "1", features = ["full"] }
 elasticsearch = "9.0.0-alpha.1"
+serde_json = "1.0.141"
