--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ members = [
     "crates/fhir-operation-error",
     "crates/fhir-operation-error-derive",
     "crates/indexing-worker",
-    "crates/config", "crates/fhir-search-parameters",
+    "crates/config", "crates/fhir-search-parameters", "crates/fhir-datetime",
 ]
 
 [dependencies]
