--- a/crates/fhir-model/Cargo.toml
+++ b/crates/fhir-model/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2024"
 sqlx = ["dep:sqlx"]
 
 [dependencies]
-oxidized-fhir-datetime = { path = "../fhir-datetime" }
 oxidized-reflect = { path = "../reflect", features = ["derive"] }
 oxidized-fhir-serialization-json = { path = "../fhir-serialization-json", features = [
     "derive",
@@ -16,3 +15,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
 sqlx = { version = "0.8.6", optional = true }
+once_cell = "1.21.3"
+regex = "1.11.1"
+chrono = "0.4.41"
