--- a/crates/indexing-worker/Cargo.toml
+++ b/crates/indexing-worker/Cargo.toml
@@ -27,3 +27,4 @@ serde = "1.0.219"
 tokio = { version = "1", features = ["full"] }
 elasticsearch = "9.0.0-alpha.1"
 serde_json = "1.0.141"
+chrono = "0.4.41"
