--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -15,6 +15,7 @@ oxidized-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
 oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
 oxidized-fhir-client = { path = "../fhir-client", features = ["http", "axum"] }
 oxidized-reflect = { path = "../reflect", features = ["derive"] }
+oxidized-fhir-repository = { path = "../fhir-repository" }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
@@ -40,5 +41,3 @@ tracing-subscriber = "0.3.19"
 anyhow = "1.0.98"
 json-patch = "4.0.0"
 chrono = "0.4.41"
-nanoid = "0.4.0"
-elasticsearch = "9.0.0-alpha.1"
