--- a/crates/fhir-search/Cargo.toml
+++ b/crates/fhir-search/Cargo.toml
@@ -13,6 +13,9 @@ oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
 ] }
 oxidized-fhir-repository = { path = "../fhir-repository" }
 oxidized-artifacts = { path = "../artifacts" }
+oxidized-reflect = { path = "../reflect" }
+chrono = "0.4.41"
 serde = "1.0.219"
 serde_json = "1.0.140"
 tracing = "0.1.41"
+rayon = "1.10.0"
