--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -16,6 +16,7 @@ oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
 oxidized-fhir-client = { path = "../fhir-client", features = ["http", "axum"] }
 oxidized-reflect = { path = "../reflect", features = ["derive"] }
 oxidized-fhir-repository = { path = "../fhir-repository" }
+oxidized-fhir-search = { path = "../fhir-search" }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
