--- a/crates/indexing-worker/Cargo.toml
+++ b/crates/indexing-worker/Cargo.toml
@@ -7,12 +7,11 @@ edition = "2024"
 oxidized-config = { path = "../config" }
 oxidized-fhirpath = { path = "../fhirpath" }
 oxidized-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
-oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
 oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
     "derive",
 ] }
-oxidized-artifacts = { path = "../artifacts" }
-oxidized-reflect = { path = "../reflect" }
+oxidized-fhir-search = { path = "../fhir-search" }
+oxidized-fhir-repository = { path = "../fhir-repository" }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
@@ -20,11 +19,7 @@ sqlx = { version = "0.8", features = [
     "time",
 ] }
 sqlx-postgres = "0.8.6"
-rayon = "1.10.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-serde = "1.0.219"
 tokio = { version = "1", features = ["full"] }
 elasticsearch = "9.0.0-alpha.1"
-serde_json = "1.0.141"
-chrono = "0.4.41"
