--- a/crates/codegen/Cargo.toml
+++ b/crates/codegen/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
+oxidized-fhir-model = { path = "../fhir-model" }
 indexmap = "2.10.0"
 once_cell = "1.21.3"
 proc-macro2 = "1.0.95"
