--- a/crates/artifacts/Cargo.toml
+++ b/crates/artifacts/Cargo.toml
@@ -2,6 +2,7 @@
 name = "oxidized-artifacts"
 version = "0.1.0"
 edition = "2024"
+include = ["/src", "/artifacts", "!.DS_Store"]
 
 [dependencies]
 oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
