--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -42,3 +42,7 @@ tracing-subscriber = "0.3.19"
 anyhow = "1.0.98"
 json-patch = "4.0.0"
 chrono = "0.4.41"
+
+
+[dev-dependencies]
+typify = "0.4.2"
