--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -36,7 +36,7 @@ tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
 rand = "0.9.1"
 axum-extra = { version = "0.10.1", features = ["typed-routing"] }
 tower-http = { version = "0.6.6", features = ["fs"] }
-maud = "0.27.0"
+maud = { version = "0.27.0", features = ["axum"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 anyhow = "1.0.98"
