--- a/crates/fhir-repository/Cargo.toml
+++ b/crates/fhir-repository/Cargo.toml
@@ -19,3 +19,4 @@ sqlx = { version = "0.8", features = [
 ] }
 sqlx-postgres = "0.8.6"
 nanoid = "0.4.0"
+tokio = { version = "1.47.1", features = ["sync"] }
