--- a/crates/fhir-model/Cargo.toml
+++ b/crates/fhir-model/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2024"
 [features]
 sqlx = ["dep:sqlx"]
 
+[[bench]]
+name = "serialization_bench"
+harness = false
+
+
 [dependencies]
 oxidized-reflect = { path = "../reflect", features = ["derive"] }
 oxidized-fhir-serialization-json = { path = "../fhir-serialization-json", features = [
@@ -18,3 +23,6 @@ sqlx = { version = "0.8.6", optional = true }
 once_cell = "1.21.3"
 regex = "1.11.1"
 chrono = "0.4.41"
+
+[dev-dependencies]
+criterion = "0.7"
