--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ members = [
     "crates/fhir-operation-error-derive",
     "crates/indexing-worker",
     "crates/config",
-    "crates/artifacts", "crates/fhir-search", "crates/fhir-repository",
+    "crates/artifacts",
+    "crates/fhir-search",
+    "crates/repository",
 ]
 
 [dependencies]
