--- a/crates/fhir-search/Cargo.toml
+++ b/crates/fhir-search/Cargo.toml
@@ -11,7 +11,7 @@ oxidized-fhir-model = { path = "../fhir-model" }
 oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
     "derive",
 ] }
-oxidized-fhir-repository = { path = "../fhir-repository" }
+oxidized-repository = { path = "../repository" }
 oxidized-artifacts = { path = "../artifacts" }
 oxidized-reflect = { path = "../reflect" }
 chrono = "0.4.41"
