--- a/crates/indexing-worker/Cargo.toml
+++ b/crates/indexing-worker/Cargo.toml
@@ -11,7 +11,7 @@ oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
     "derive",
 ] }
 oxidized-fhir-search = { path = "../fhir-search" }
-oxidized-fhir-repository = { path = "../fhir-repository" }
+oxidized-repository = { path = "../repository" }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
