--- a/crates/repository/Cargo.toml
+++ b/crates/repository/Cargo.toml
@@ -20,3 +20,4 @@ sqlx = { version = "0.8", features = [
 sqlx-postgres = "0.8.6"
 nanoid = "0.4.0"
 tokio = { version = "1.47.1", features = ["sync"] }
+serde_json = "1.0.142"
