--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -50,8 +50,4 @@ rsa = "0.9.8"
 regex = "1.11.1"
 sha2 = "0.10.9"
 base64 = "0.22.1"
-jsonwebkey = { version = "0.3.5", features = [
-    "jwt-convert",
-    "generate",
-    "pkcs-convert",
-] }
+sha1 = "0.10.6"
