--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,8 +17,9 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
-      - run: cd backend
       - name: Build
         run: cargo build --verbose --workspace
+        working-directory: ./backend
       - name: Run tests
         run: cargo test --verbose --workspace
+        working-directory: ./backend
