--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@oxidized-health/frontend",
-  "packageManager": "yarn@4.6.0",
+  "packageManager": "yarn@4.9.3",
   "workspaces": [
     "packages/*",
     "artifacts/**/*"
-  ]
+  ],
+  "devDependencies": {
+    "@yarnpkg/pnpify": "^4.1.5",
+    "typescript": "^5.9.2"
+  }
 }
