--- a/backend/crates/artifacts/Cargo.toml
+++ b/backend/crates/artifacts/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+oxidized-macro-loads = { path = "../macro-loads" }
 oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
 oxidized-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
 once_cell = "1.21.3"
