--- a/backend/crates/fhir-model/Cargo.toml
+++ b/backend/crates/fhir-model/Cargo.toml
@@ -19,7 +19,7 @@ oxidized-fhir-serialization-json = { path = "../fhir-serialization-json", featur
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
-sqlx = { version = "0.8.6", optional = true }
+sqlx = { version = "0.8.6", optional = true, features = ["postgres"] }
 once_cell = "1.21.3"
 regex = "1.11.1"
 chrono = "0.4.41"
