--- a/backend/crates/server/Cargo.toml
+++ b/backend/crates/server/Cargo.toml
@@ -36,7 +36,12 @@ tower-sessions = "0.14.0"
 tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
 rand = "0.8"
 axum-extra = { version = "0.10.1", features = ["typed-routing"] }
-tower-http = { version = "0.6.6", features = ["fs", "cors", "normalize-path"] }
+tower-http = { version = "0.6.6", features = [
+    "fs",
+    "cors",
+    "normalize-path",
+    "compression-gzip",
+] }
 maud = { version = "0.27.0", features = ["axum"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
