--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -30,7 +30,7 @@ members = [
     "crates/repository",
     "crates/macro-loads",
     "crates/fhir-generated-ops",
-    "crates/fhir-terminology",
+    "crates/fhir-terminology", "crates/fhir-ops",
 ]
 
 [dependencies]
