--- a/backend/crates/fhir-ops/Cargo.toml
+++ b/backend/crates/fhir-ops/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+oxidized-fhir-model = { path = "../fhir-model" }
+oxidized-fhir-operation-error = { path = "../fhir-operation-error" }
