--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "crates/macro-loads",
     "crates/fhir-generated-ops",
     "crates/fhir-terminology",
+    "crates/fhir-ops",
 ]
 
 [dependencies]
