--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -31,7 +31,7 @@ members = [
     "crates/macro-loads",
     "crates/fhir-generated-ops",
     "crates/fhir-terminology",
-    "crates/fhir-ops",
+    "crates/fhir-ops", "crates/fhir-ops-derive",
 ]
 
 [dependencies]
