--- a/backend/crates/fhir-generated-ops/Cargo.toml
+++ b/backend/crates/fhir-generated-ops/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 oxidized-fhir-model = { path = "../fhir-model" }
 oxidized-fhir-ops = { path = "../fhir-ops", features = ["derive"] }
+oxidized-fhir-operation-error = { path = "../fhir-operation-error" }
