--- a/backend/crates/fhir-ops/Cargo.toml
+++ b/backend/crates/fhir-ops/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "fhir-ops"
+name = "oxidized-fhir-ops"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+derive = ["dep:oxidized-fhir-ops-derive"]
+
 [dependencies]
+oxidized-fhir-ops-derive = { path = "../fhir-ops-derive", optional = true }
 oxidized-fhir-model = { path = "../fhir-model" }
 oxidized-fhir-operation-error = { path = "../fhir-operation-error" }
