--- a/backend/crates/cli/Cargo.toml
+++ b/backend/crates/cli/Cargo.toml
@@ -9,3 +9,4 @@ oxidized-fhirpath = { path = "../fhirpath" }
 oxidized-codegen = { path = "../codegen" }
 thiserror = "2.0.12"
 serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
