--- a/backend/crates/server/Cargo.toml
+++ b/backend/crates/server/Cargo.toml
@@ -18,6 +18,9 @@ oxidized-fhir-client = { path = "../fhir-client", features = ["http", "axum"] }
 oxidized-reflect = { path = "../reflect", features = ["derive"] }
 oxidized-repository = { path = "../repository" }
 oxidized-fhir-search = { path = "../fhir-search" }
+oxidized-fhir-ops = { path = "../fhir-ops" }
+oxidized-fhir-generated-ops = { path = "../fhir-generated-ops" }
+oxidized-fhir-terminology = { path = "../fhir-terminology" }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
