--- a/frontend/packages/meta-value/package.json
+++ b/frontend/packages/meta-value/package.json
@@ -11,8 +11,8 @@
   "types": "lib/index.d.ts",
   "type": "module",
   "scripts": {
-    "_generate_meta": "yarn node ../cli/lib/oxidized-health.js generate meta --output src/v2/generated/meta/r4.ts && yarn node ../cli/lib/oxidized-health.js generate meta --version 4.3 --output src/v2/generated/meta/r4b.ts",
-    "_generate_type_canonical": "yarn node ../cli/lib/oxidized-health.js generate type-to-canonical --output src/v2/generated/type-canonical/r4.ts && yarn node ../cli/lib/oxidized-health.js generate type-to-canonical --version 4.3 --output src/v2/generated/type-canonical/r4b.ts",
+    "_generate_meta": "yarn node ../cli/lib/oxidizedhealth.js generate meta --output src/v2/generated/meta/r4.ts && yarn node ../cli/lib/oxidizedhealth.js generate meta --version 4.3 --output src/v2/generated/meta/r4b.ts",
+    "_generate_type_canonical": "yarn node ../cli/lib/oxidizedhealth.js generate type-to-canonical --output src/v2/generated/type-canonical/r4.ts && yarn node ../cli/lib/oxidizedhealth.js generate type-to-canonical --version 4.3 --output src/v2/generated/type-canonical/r4b.ts",
     "generate": "yarn _generate_meta && yarn _generate_type_canonical",
     "build": "tsc",
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
