--- a/frontend/artifacts/r4/oxidizedhealth-core/definitions/oxidized-health/structuredefinition/project.json
+++ b/frontend/artifacts/r4/oxidizedhealth-core/definitions/oxidized-health/structuredefinition/project.json
@@ -1,27 +1,27 @@
 {
     "resourceType": "StructureDefinition",
-    "id": "Membership",
-    "url": "https://oxidized-health.com/StructureDefinition/Membership",
+    "id": "Project",
+    "url": "https://oxidized-health.com/StructureDefinition/Project",
     "version": "4.0.1",
-    "name": "Membership",
+    "name": "Project",
     "status": "active",
     "publisher": "oxidized-health",
     "fhirVersion": "4.0.1",
     "kind": "resource",
     "abstract": false,
-    "type": "Membership",
+    "type": "Project",
     "baseDefinition": "http://hl7.org/fhir/StructureDefinition/Resource",
-    "description": "A Membership resource is used to represent a user's membership in a project. This resource can link to an AccessPolicy resource to define the user's access rights within a project.",
+    "description": "A FHIR project is used to represent a collection of resources and users.",
     "derivation": "specialization",
     "snapshot": {
         "element": [
             {
-                "id": "Membership",
-                "path": "Membership",
+                "id": "Project",
+                "path": "Project",
                 "min": 0,
                 "max": "*",
                 "base": {
-                    "path": "Membership",
+                    "path": "Project",
                     "min": 0,
                     "max": "*"
                 },
@@ -29,8 +29,8 @@
                 "isSummary": false
             },
             {
-                "id": "Membership.id",
-                "path": "Membership.id",
+                "id": "Project.id",
+                "path": "Project.id",
                 "short": "Logical id of this artifact",
                 "definition": "The logical id of the resource, as used in the URL for the resource. Once assigned, this value never changes.",
                 "comment": "The only time that a resource does not have an id is when it is being submitted to the server using a create operation.",
@@ -56,8 +56,8 @@
                 "isSummary": true
             },
             {
-                "id": "Membership.meta",
-                "path": "Membership.meta",
+                "id": "Project.meta",
+                "path": "Project.meta",
                 "short": "Metadata about the resource",
                 "definition": "The metadata about the resource. This is content that is maintained by the infrastructure. Changes to the content might not always be associated with version changes to the resource.",
                 "min": 0,
@@ -86,48 +86,31 @@
                 "isSummary": true
             },
             {
-                "id": "Membership.link",
-                "path": "Membership.link",
-                "short": "The clinical resource linked to this Membership.",
+                "id": "Project.name",
+                "path": "Project.name",
+                "short": "Projects name",
                 "type": [
                     {
-                        "code": "Reference",
-                        "targetProfile": [
-                            "http://hl7.org/fhir/StructureDefinition/Patient",
-                            "http://hl7.org/fhir/StructureDefinition/Practitioner",
-                            "http://hl7.org/fhir/StructureDefinition/RelatedPerson",
-                            "http://hl7.org/fhir/StructureDefinition/Person"
-                        ]
+                        "code": "String"
                     }
                 ],
                 "min": 0,
                 "max": "1"
             },
             {
-                "id": "Membership.user",
-                "path": "Membership.user",
-                "short": "The user associated with this Membership.",
+                "id": "Project.fhirVersion",
+                "path": "Project.fhirVersion",
+                "short": "A Given projects fhir version.",
                 "type": [
                     {
-                        "code": "Reference",
-                        "targetProfile": [
-                            "https://oxidized-health.com/StructureDefinition/User"
-                        ]
+                        "code": "code"
                     }
                 ],
+                "binding": {
+                    "strength": "required",
+                    "valueSet": "https://oxidized-health.app/fhir/ValueSet/SupportedFHIRVersion|4.0.1"
+                },
                 "min": 1,
-                "max": "1"
-            },
-            {
-                "id": "Membership.name",
-                "path": "Membership.name",
-                "short": "Users name",
-                "type": [
-                    {
-                        "code": "HumanName"
-                    }
-                ],
-                "min": 0,
                 "max": "1"
             }
         ]
