--- a/frontend/packages/fhir-types/package.json
+++ b/frontend/packages/fhir-types/package.json
@@ -9,8 +9,8 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "generate-r4": "yarn node ../cli/lib/oxidized-health.js generate types-artifacts --version=4.0 --output=./src/generated/r4 && yarn build",
-    "generate-r4b": "yarn node ../cli/lib/oxidized-health.js generate types-artifacts --version=4.3 --output=./src/generated/r4b && yarn build",
+    "generate-r4": "yarn node ../cli/lib/oxidizedhealth.js generate types-artifacts --version=4.0 --output=./src/generated/r4 && yarn build",
+    "generate-r4b": "yarn node ../cli/lib/oxidizedhealth.js generate types-artifacts --version=4.3 --output=./src/generated/r4b && yarn build",
     "generate": "yarn generate-r4 && yarn generate-r4b",
     "build": "tsc",
     "publish": "yarn build && yarn npm publish --access public --tolerate-republish"
