--- a/backend/crates/artifacts/artifacts/r4/oxidized_health/structure_definition/project.json
+++ b/backend/crates/artifacts/artifacts/r4/oxidized_health/structure_definition/project.json
@@ -91,7 +91,7 @@
                 "short": "Projects name",
                 "type": [
                     {
-                        "code": "String"
+                        "code": "string"
                     }
                 ],
                 "min": 0,
