--- a/backend/crates/artifacts/artifacts/r4/oxidized_health/operation/current_project.json
+++ b/backend/crates/artifacts/artifacts/r4/oxidized_health/operation/current_project.json
@@ -1,13 +1,13 @@
 {
     "resourceType": "OperationDefinition",
     "id": "project-information",
-    "url": "https://iguhealth.app/OperationDefinition/project-information",
+    "url": "https://oxidized-health.app/OperationDefinition/project-information",
     "version": "4.0.1",
-    "name": "Get Project resource for the current project",
+    "name": "Current Project Information",
     "status": "draft",
     "kind": "operation",
     "date": "2023-11-16T09:29:23+11:00",
-    "publisher": "IGUHealth",
+    "publisher": "OxidizedHealth",
     "description": "Get Project resource for the current project.",
     "code": "current-project",
     "system": true,
