--- a/backend/crates/fhir-search/Cargo.toml
+++ b/backend/crates/fhir-search/Cargo.toml
@@ -11,6 +11,7 @@ oxidized-fhir-model = { path = "../fhir-model" }
 oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
     "derive",
 ] }
+oxidized-jwt = { path = "../jwt" }
 oxidized-repository = { path = "../repository" }
 oxidized-artifacts = { path = "../artifacts" }
 oxidized-reflect = { path = "../reflect" }
