--- a/backend/crates/jwt/Cargo.toml
+++ b/backend/crates/jwt/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2024"
 
 [features]
 sqlx = ["dep:sqlx"]
+reflect = ["dep:oxidized-reflect"]
 
 [dependencies]
 serde = "1.0.228"
 oxidized-fhir-model = { path = "../fhir-model" }
 oxidized-fhir-operation-error = { path = "../fhir-operation-error" }
+oxidized-reflect = { path = "../reflect", optional = true }
 sqlx = { version = "0.8", optional = true }
