--- a/backend/crates/server/Cargo.toml
+++ b/backend/crates/server/Cargo.toml
@@ -22,6 +22,7 @@ oxidized-fhir-ops = { path = "../fhir-ops" }
 oxidized-fhir-generated-ops = { path = "../fhir-generated-ops" }
 oxidized-fhir-terminology = { path = "../fhir-terminology" }
 oxidized-jwt = { path = "../jwt" }
+oxidized-access-control = { path = "../access-control" }
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
