--- a/backend/crates/repository/Cargo.toml
+++ b/backend/crates/repository/Cargo.toml
@@ -23,3 +23,4 @@ nanoid = "0.4.0"
 tokio = { version = "1.47.1", features = ["sync"] }
 serde_json = "1.0.142"
 regex = "1.12.2"
+moka = { version = "0.12.11", features = ["future"] }
