--- a/backend/crates/fhir-client/Cargo.toml
+++ b/backend/crates/fhir-client/Cargo.toml
@@ -10,6 +10,7 @@ http = ["dep:reqwest"]
 [dependencies]
 oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
 oxidized-fhir-model = { path = "../fhir-model" }
+oxidized-jwt = { path = "../jwt" }
 axum = { version = "0.8.4", optional = true }
 reqwest = { version = "0.12", optional = true }
 http = "1.3.1"
