--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,9 +11,7 @@ edition = "2024"
 resolver = "3"
 members = [
     "crates/server",
-    "crates/lambda-test",
     "crates/fhirpath",
-    "crates/cli",
     "crates/codegen",
     "crates/reflect",
     "crates/reflect-derive",
@@ -38,5 +36,13 @@ members = [
 ]
 
 [dependencies]
-tokio = { version = "1.45.1", features = ["full"] }
-futures = "0.3"
+clap = { version = "4.5.40", features = ["derive"] }
+thiserror = "2.0.12"
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+quote = "1.0.40"
+oxidized-fhir-model = { path = "./crates/fhir-model" }
+oxidized-fhirpath = { path = "./crates/fhirpath" }
+oxidized-codegen = { path = "./crates/codegen" }
+oxidized-fhir-operation-error = { path = "./crates/fhir-operation-error" }
+oxidized-fhir-serialization-json = { path = "./crates/fhir-serialization-json" }
