--- a/backend/crates/server/Cargo.toml
+++ b/backend/crates/server/Cargo.toml
@@ -66,3 +66,5 @@ url = "2.5.4"
 serde_html_form = "0.2.8"
 zxcvbn = "3.1.0"
 petgraph = "0.8.3"
+rust-embed = { version = "8.9.0", features = ["axum-ex"] }
+mime_guess = "2.0.5"
