--- a/backend/crates/artifacts/artifacts/r4/oxidized_health/structure_definition/project.json
+++ b/backend/crates/artifacts/artifacts/r4/oxidized_health/structure_definition/project.json
@@ -112,6 +112,21 @@
                 },
                 "min": 1,
                 "max": "1"
+            },
+            {
+                "id": "Project.identityProvider",
+                "path": "Project.identityProvider",
+                "short": "A Given projects identity providers.",
+                "type": [
+                    {
+                        "code": "Reference",
+                        "targetProfile": [
+                            "https://oxidized-health.com/StructureDefinition/IdentityProvider"
+                        ]
+                    }
+                ],
+                "min": 0,
+                "max": "3"
             }
         ]
     }
