--- a/frontend/artifacts/r4/oxidizedhealth-core/definitions/oxidized-health/structuredefinition/project.json
+++ b/frontend/artifacts/r4/oxidizedhealth-core/definitions/oxidized-health/structuredefinition/project.json
@@ -91,7 +91,7 @@
                 "short": "Projects name",
                 "type": [
                     {
-                        "code": "String"
+                        "code": "string"
                     }
                 ],
                 "min": 0,
@@ -112,6 +112,21 @@
                 },
                 "min": 1,
                 "max": "1"
+            },
+            {
+                "id": "Project.identityProvider",
+                "path": "Project.identityProvider",
+                "short": "A Given projects identity providers.",
+                "type": [
+                    {
+                        "code": "Reference",
+                        "targetProfile": [
+                            "https://oxidized-health.com/StructureDefinition/IdentityProvider"
+                        ]
+                    }
+                ],
+                "min": 0,
+                "max": "3"
             }
         ]
     }
