--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -56,3 +56,5 @@ oxidized-server = { path = "./crates/server" }
 oxidized-config = { path = "./crates/config" }
 oxidized-repository = { path = "./crates/repository" }
 oxidized-indexing-worker = { path = "./crates/indexing-worker" }
+toml = "0.9.8"
+serde = "1.0.228"
