--- a/backend/crates/fhir-client/Cargo.toml
+++ b/backend/crates/fhir-client/Cargo.toml
@@ -11,6 +11,9 @@ http = ["dep:reqwest"]
 oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
 oxidized-fhir-model = { path = "../fhir-model" }
 oxidized-jwt = { path = "../jwt" }
+oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
+    "derive",
+] }
 axum = { version = "0.8.4", optional = true }
 reqwest = { version = "0.12", optional = true }
 http = "1.3.1"
