--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -57,3 +57,4 @@ toml = "0.9.8"
 serde = "1.0.228"
 dialoguer = "0.12.0"
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
+reqwest = { version = "0.12" }
