alter sonar props

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,8 @@ sonar.organization=oxidizedhealth
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=backend/**/*.rs,frontend/**/*.ts,frontend/**/*.tsx
+sonar.sources=.
+sonar.test.exclusions=*.json,*.toml,*.md,*.yml
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
