turn off coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,7 @@ sonar.organization=hastehealth
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
 sonar.test.exclusions=**/*.json,**/*.toml,**/*.md,**/*.yml
+sonar.coverage.exclusions=**/*
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
